Fixed layout issue on smaller windows

--- a/less/styles.less
+++ b/less/styles.less
@@ -116,6 +116,10 @@
   }
 }
 
+.cloud-ide-2022-registration p {
+  font-size: 1.2em;
+}
+
 .white-row{
   background-color: #fff;
 }
